# agentic-ai-mcp-workflows

./: .coverage  .coveragerc  .deployment_vars  .env  .env.example  .gitignore  ACCESS_URLS.md  AGENT_ENHANCEMENT_PLAN.md  DEMO_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_MIGRATION_SUMMARY.md  DEPLOYMENT_SUMMARY.md  DEPLOY_EXAMPLES.md  DOMAIN_AGENT_MODULAR_REFACTORING.md  DOMAIN_AGENT_REFACTOR_SUMMARY.md  Dockerfile  Dockerfile.adk  Dockerfile.comprehensive-ui  Dockerfile.enhanced-domain-agent  Dockerfile.fastmcp-services  Dockerfile.python-a2a-technical-agent  Dockerfile.streamlit-ui  ENHANCED_DEPLOYMENT.md  ENHANCED_DOMAIN_AGENT_SUMMARY.md  FASTMCP_CLIENT_INTEGRATION_SUMMARY.md  FASTMCP_IMPLEMENTATION_SUMMARY.md  FOCUSED_API_GUIDE.md  GITHUB_ACTIONS_IMPLEMENTATION_SUMMARY.md  GOOGLE_ADK_LITELLM_INTEGRATION.md  GOOGLE_ADK_MIGRATION_PLAN.md  GOOGLE_ADK_OPENROUTER_INTEGRATION_PLAN.md  KUBERNETES_ARCHITECTURE_VALIDATION.md  KUBERNETES_DEPLOYMENT_SUCCESS.md  KUBERNETES_DEPLOYMENT_SUMMARY.md  LLM_INTENT_IMPLEMENTATION_REPORT.md  MONITORING_DEMO_CARD.md  MONITORING_INTEGRATION.md  PYTHON_A2A_INTEGRATION.md  README.md  (+30 more)
.github/: dependabot.yml
.history/: .env_20250529214814  Dockerfile_20250529203724.agent  Dockerfile_20250529203734.ui  Dockerfile_20250529233952.simple-ui  README_20250529171641.md  README_20250529215450.md  README_20250530224153.md  docker-compose_20250529203125.yml  pyproject_20250529212621.toml  pyproject_20250529212845.toml  pyproject_20250529213000.toml  requirements_20250528134425.txt  requirements_20250529171738.txt  requirements_20250530224211.txt
agents/: base.py  llm_client.py  mcp_tools.py  observability.py
archive/: A2A_ARCHITECTURE_SUMMARY.md  Dockerfile.domain-agent  Dockerfile.python-a2a-technical-agent  KUBERNETES_DEPLOYMENT_SUMMARY.md  MODULAR_FASTMCP_SUMMARY.md  PROJECT_SUMMARY.md  README.md  TECHNICAL_AGENT_MCP_FIXES.md  TEST_EXECUTION_REPORT.md  architecture_test_report.json  kubernetes_architecture_test_report.json  requirements-fastmcp.txt  requirements-streamlit.txt  test_new_architecture.py
archive/agents/domain/: __init__.py  domain_agent_core.py  execution_planner.py  http_endpoints.py  intent_analyzer.py  pyproject.toml  python_a2a_domain_agent_legacy.py  response_generator.py
archive/services/claims_service/: Dockerfile  mcp_server.py  pyproject.toml  requirements.txt
data/: mock_data.json
docs/: ARCHITECTURE.md  CI_CD_PIPELINE_FIXES.md  DEPLOYMENT_AND_TESTING_SUMMARY.md  DEPLOYMENT_GUIDE.md  GITHUB_ACTIONS_CI_CD_PLAN.md  LLM_TESTING_GUIDE.md  OBSERVABILITY_GUIDE.md  OBSERVABILITY_QUICKSTART.md
domain_agent/: intent_analyzer.py  main.py  prompt_loader.py  prompts.yaml  response_formatter.py
insurance-adk/: GOOGLE_ADK_MIGRATION_SUMMARY.md  README.md  agent.py  config.env.example  requirements.txt
k8s/: claims-agent-simple.yaml  enhanced-domain-agent-deployment.yaml  fastmcp-services-deployment.yaml  namespace-and-secrets.yaml  streamlit-ui-deployment.yaml  ui-config.yaml
monitoring/: README.md  __init__.py
policy_server/: main.py
scripts/: add_metrics_endpoints.py  build-and-deploy.sh  build-docker-images.sh  create_insurance_dashboard.py  create_simple_dashboard.py  demo.py  deploy.sh  deploy_adk.sh  deploy_basic.sh  deploy_fastmcp_k8s.sh  deploy_fastmcp_services.sh  deploy_k8s.sh  deploy_k8s_with_testing.sh  deploy_observability.sh  deploy_session_fix.sh  deploy_v2.sh  (+27 more)
tests/: AUTO_POLICY_RESPONSE_FIXES.md  COMPREHENSIVE_TEST_COVERAGE_REPORT.md  DOMAIN_AGENT_TEST_REPORT.md  POLICY_SERVER_TEST_REPORT.md  README.md  TECHNICAL_AGENT_POLICY_INTEGRATION_REPORT.md  comprehensive_test_suite.py  conftest.py  demo_multi_service_discovery.py  final_validation_report.md  pyproject.toml  run_all_tests.py  run_integration_tests.py  run_quick_validation.py  test_1_policy_server.py  test_2_technical_agent_integration.py  test_3_full_agent_chain.py  test_4_complete_system.py  test_adk_mcp_integration.py  test_cleanup_validation.py  test_comprehensive_kubernetes.py  test_focused_apis.py  test_multi_intent_a2a.py  test_observability.py  test_openrouter_llm.py  test_simple_apis.py  test_system_connectivity.py  test_ui_imports.py  verify_monitoring_integration.py
tests/comprehensive/: run_all_comprehensive_tests.py  test_domain_agent_comprehensive.py  test_domain_technical_integration.py  test_technical_agent_fastmcp.py
tests/e2e/: policy_queries_e2e_test.py  policy_queries_test_results.json  test_focused_apis.py
tests/google-adk-tests/: README.md  demo_adk_commands.py  demo_google_adk.py  test_a2a_communication.py  test_google_adk_agents.py
tests/integration/: __init__.py  technical_agent_policy_integration_results.json  test_agent_communication.py  test_api_integration.py  test_comprehensive_integration.py  test_domain_agent_technical_agent_integration.py  test_dynamic_discovery.py  test_e2e_workflows.py  test_fastmcp_comprehensive.py  test_fastmcp_integration.py  test_full_workflow.py  test_llm_api_integration.py  test_services_integration.py  test_technical_agent_policy_server_integration.py  test_ui_accessibility.py  test_ui_container_version.py  test_ui_domain_agent.py
tests/k8s/: run_all_tests.py  test_domain_agent.py  test_e2e.py  test_integration.py  test_policy_server.py  test_streamlit_ui.py  test_technical_agent.py
tests/results/: test_results_post_deployment.json
tests/ui/: api_test_results.json  conftest.py  selenium_requirements.txt  test_chat_interface.py  test_selenium_ui.py
tests/unit/: __init__.py  domain_agent_test_results.json  policy_server_test_results.json  test_agent_base.py  test_agent_llm_integration.py  test_api_structure.py  test_auto_policy_fix.py  test_basic.py  test_billing_cycle_accuracy.py  test_comprehensive_scenarios.py  test_customer_service.py  test_domain_agent.py  test_domain_agent_core.py  test_fastmcp_services_standalone.py  test_intelligent_agent.py  test_llm_client.py  test_llm_simple.py  test_mcp_direct.py  test_policy_server.py  test_policy_server_comprehensive.py  test_service_discovery.py  test_technical_agent_focused.py  test_technical_agent_integration.py
(+241 files in other folders)
