[tool.poetry]
name = "insurance-ai-poc"
version = "0.1.0"
description = "Insurance AI Proof of Concept"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
aiohttp = "3.9.1"
alembic = "1.12.1"
anthropic = "0.7.8"
anyio = "4.9.0"
asyncio-mqtt = "0.16.1"
black = "23.11.0"
click = "8.1.7"
fastapi = "0.115.12"
fastmcp = "0.3.1"
flake8 = "6.1.0"
httpx = "0.27.0"
jsonschema = "4.20.0"
kubernetes = "28.1.0"
marshmallow = "3.20.1"
mcp = "1.9.1"
mypy = "1.7.1"
openai = "1.82.0"
pydantic = "2.8.0"
pydantic-settings = "2.6.1"
pre-commit = "3.5.0"
prometheus-client = "0.19.0"
pytest = "7.4.3"
pytest-asyncio = "0.21.1"
pytest-cov = "4.1.0"
pytest-mock = "3.12.0"
python-a2a = "0.1.0"
python-dotenv = "1.0.0"
requests = "2.31.0"
rich = "13.7.0"
sqlalchemy = "2.0.23"
structlog = "23.2.0"
typer = "0.9.0"
uvicorn = "0.24.0"
pyyaml = "6.0.1"

[tool.poetry.dev-dependencies]
# Add any dev dependencies here if needed

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 