[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-tests"
version = "1.0.0"
description = "Test suite for insurance AI PoC"
dependencies = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-cov",
    "httpx",
    "requests",
    "locust",
] 