[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "domain-agents"
version = "1.0.0"
description = "Domain-specific AI agents (Claims, Support, Policy)"
dependencies = [
    "fastapi",
    "uvicorn",
    "structlog",
    "httpx",
    "mcp",
    "anthropic",
    "openai",
] 