[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claims-service"
version = "1.0.0"
description = "Claims processing service with FastAPI"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "prometheus-fastapi-instrumentator",
    "structlog",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-multipart",
] 